update generated client
