# pkg/tsuru/app_api.go
@@ -3,7 +3,7 @@
  *
  * Open source, extensible and Docker-based Platform as a Service (PaaS)
  *
- * API version: 1.6.0
+ * API version: 1.6
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 
@@ -113,13 +113,14 @@ list apps
     @param "status" (string) Filter applications by unit status.
     @param "tag" ([]string) Filter applications by tag.
     @param "teamOwner" (string) Filter applications by team owner
-@return */
-func (a *AppApiService) List(ctx context.Context, localVarOptionals map[string]interface{}) (*http.Response, error) {
+@return AppListResponse*/
+func (a *AppApiService) List(ctx context.Context, localVarOptionals map[string]interface{}) (AppListResponse, *http.Response, error) {
 	var (
 		localVarHttpMethod = strings.ToUpper("Get")
 		localVarPostBody   interface{}
 		localVarFileName   string
 		localVarFileBytes  []byte
+		successPayload     AppListResponse
 	)
 
 	// create path and map variables
@@ -130,25 +131,25 @@ func (a *AppApiService) List(ctx context.Context, localVarOptionals map[string]i
 	localVarFormParams := url.Values{}
 
 	if err := typeCheckParameter(localVarOptionals["locked"], "bool", "locked"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 	if err := typeCheckParameter(localVarOptionals["name"], "string", "name"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 	if err := typeCheckParameter(localVarOptionals["owner"], "string", "owner"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 	if err := typeCheckParameter(localVarOptionals["platform"], "string", "platform"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 	if err := typeCheckParameter(localVarOptionals["pool"], "string", "pool"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 	if err := typeCheckParameter(localVarOptionals["status"], "string", "status"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 	if err := typeCheckParameter(localVarOptionals["teamOwner"], "string", "teamOwner"); err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 
 	if localVarTempParam, localVarOk := localVarOptionals["locked"].(bool); localVarOk {
@@ -208,18 +209,22 @@ func (a *AppApiService) List(ctx context.Context, localVarOptionals map[string]i
 	}
 	r, err := a.client.prepareRequest(ctx, localVarPath, localVarHttpMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, localVarFileName, localVarFileBytes)
 	if err != nil {
-		return nil, err
+		return successPayload, nil, err
 	}
 
 	localVarHttpResponse, err := a.client.callAPI(r)
 	if err != nil || localVarHttpResponse == nil {
-		return localVarHttpResponse, err
+		return successPayload, localVarHttpResponse, err
 	}
 	defer localVarHttpResponse.Body.Close()
 	if localVarHttpResponse.StatusCode >= 300 {
 		bodyBytes, _ := ioutil.ReadAll(localVarHttpResponse.Body)
-		return localVarHttpResponse, reportError("Status: %v, Body: %s", localVarHttpResponse.Status, bodyBytes)
+		return successPayload, localVarHttpResponse, reportError("Status: %v, Body: %s", localVarHttpResponse.Status, bodyBytes)
 	}
 
-	return localVarHttpResponse, err
+	if err = json.NewDecoder(localVarHttpResponse.Body).Decode(&successPayload); err != nil {
+		return successPayload, localVarHttpResponse, err
+	}
+
+	return successPayload, localVarHttpResponse, err
 }
